add the MariaDb Stuff

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,11 @@ spring.profiles.active=production
 logging.level.org.springframework=ERROR
 logging.level.org.springframework.security=TRACE
 
-#TODO local
-spring.datasource.url=jdbc:postgresql://localhost:5432/test_auth
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+#MariaDb Stuff
+spring.datasource.url=jdbc:mariadb://localhost:3306/test_auth
+spring.datasource.username=root
+spring.datasource.password=ali ali @
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 spring.jpa.show-sql=true
 
