Flyway Schema Added using MariaDb sql Query

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.show-sql=true
 
 auth.client.id=client
 auth.client.secret=secret
+flyway.baseline-on-migrate=true
+flyway.initOnMigrate= true
